--- a/osa2/puhelinluettelo/puhelinluettelo/src/Components/alert.css
+++ b/osa2/puhelinluettelo/puhelinluettelo/src/Components/alert.css
@@ -8,3 +8,14 @@
     padding: 10px;
     margin-bottom: 10px;
   }
+
+  .error {
+    color: rgb(226, 13, 13);
+    text-align: center;
+    background: #242424;
+    font-size: 15px;
+    border-style: solid;
+    border-radius: 8px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
